--- a/2D_Side_Scroller/index.html
+++ b/2D_Side_Scroller/index.html
@@ -32,10 +32,10 @@
     <script src="Scripts/constants.js"></script>
     <script src="Scripts/managers/asset.js"></script>
     <script src="Scripts/objects/gameobject.js"></script>
-    <script src="Scripts/objects/plane.js"></script>
-    <script src="Scripts/objects/island.js"></script>
-    <script src="Scripts/objects/cloud.js"></script>
-    <script src="Scripts/objects/ocean.js"></script>
+    <script src="Scripts/objects/hero.js"></script>
+    <script src="Scripts/objects/reward.js"></script>
+    <script src="Scripts/objects/enemy.js"></script>
+    <script src="Scripts/objects/background.js"></script>
     <script src="Scripts/states/play.js"></script>
     <script src="Scripts/objects/scoreboard.js"></script>
     <script src="Scripts/states/play.js"></script>
