Added icons and foundation css for index page

--- a/2D_Side_Scroller/index.html
+++ b/2D_Side_Scroller/index.html
@@ -8,15 +8,51 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no"/>    
-    <title>CreateJS _2D_Side_Scroller</title>
+    <title>WANNA PIRANHA?</title>
 
     <!--CSS Section-->
     <link href="Styles/reset.css" rel="stylesheet" />
+    <link href="Styles/foundation.css" rel="stylesheet" />
     <link href="Styles/app.css" rel="stylesheet" />
 </head>
 
 <body onload="preload()">
     <canvas id="canvas" width="1000" height="400"></canvas>
+
+    <footer class="row">
+        <div class="large-12 columns">
+            <div class="panel">
+                <h4>Social Media Anyone?</h4>
+                <div class="row">
+                    <div class="large-12 columns">
+                        <p>I'm all over the net like a dog on a bone.</p>
+                    </div>
+                    <div class="icon-bar large-8 columns">
+                        <a class="item" href="ca.linkedin.com/in/kellymcalpine/" title="LinkedIn"><img src="icons/fi-social-linkedin.svg" alt="Linkedin Icon" /></a>
+                        <a class="item" href="https://www.facebook.com/eiramyllek73" title="Facebook"><img src="icons/fi-social-facebook.svg" alt="Facebook Icon" /></a>
+                        <a class="item" href="https://twitter.com/Eiramyllek73?lang=en" title="Twitter"><img src="icons/fi-social-twitter.svg" alt="Twitter Icon" /></a>
+                        <a class="item" href="https://github.com/eiramyllek73" title="GitHub"><img src="icons/fi-social-github.svg" alt="Facebook Icon" /></a>
+                        <a class="item" href="http://instagram.com/eiramyllek73" title="Instagram"><img src="icons/fi-social-instagram.svg" alt="Instagram Icon" /></a>
+                        <a class="item" href="http://www.pinterest.com/eiramyllek73/" title="Pinterest"><img src="icons/fi-social-pinterest.svg" alt="Pinterest Icon" /></a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="large-12 columns">
+                    <p>© Copyright Kelly M. McAlpine 2014</p>
+                    <p>~ The 2D Side-Scroller 'WANNA PIRANHA?' was created with support from <a href="https://github.com/tsiliopoulos/COMP2068-MailPilot-Build-2">tsiliopoulos</a> and <a href="http://www.createjs.com/#!/CreateJS">CREATEJS</a>~</p>
+                </div>
+                <div class="large-6 columns">
+                    <ul class="inline-list right">
+                        <li><a href="privacypolicy.html">Private Stash</a></li>
+                        <li><a href="terms_and_conditions.html">T and C</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
+
 
     <!-- Javascript Section -->
     <script src="Scripts/Libraries/jquery-2.1.1.min.js"></script>
@@ -27,7 +63,7 @@
     <script src="Scripts/Libraries/soundjs-0.5.2.min.js"></script>
     <script src="Scripts/Libraries/preloadjs-0.4.1.min.js"></script>
 
-   
+
     <!-- Game Files -->
     <script src="Scripts/constants.js"></script>
     <script src="Scripts/managers/asset.js"></script>
